--- a/Runtime/Cairo AI.asmdef
+++ b/Runtime/Cairo AI.asmdef
@@ -1,3 +1,16 @@
 {
-	"name": "CairoAI"
+    "name": "CairoAI",
+    "rootNamespace": "",
+    "references": [
+        "GUID:7b55fb2b37db77247a0c7d302275c468"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
